# facial_recognition

Desktop/facial_recognition/: CMakeLists.txt  facedetect.cpp  facedetect.py  gazetracking.py
